# monad-batcher

./: ChangeLog.md  LICENSE  README.md  default.nix  monad-batcher.cabal  monad-batcher.nix
example/: default.nix  example.hs  monad-batcher-example.cabal  monad-batcher-example.nix
src/Control/Monad/: Batcher.hs
