name:                monad-batcher
version:             0.0.0.0
synopsis:            An applicative monad that batches commands for later more efficient execution
homepage:            https://github.com/basvandijk/monad-batcher
license:             BSD3
license-file:        LICENSE
author:              Bas van Dijk
maintainer:          Bas van Dijk <v.dijk.bas@gmail.com>
copyright:           Bas van Dijk <v.dijk.bas@gmail.com>
category:            Control
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/basvandijk/monad-batcher.git

library
  exposed-modules:     Control.Monad.Batcher
  build-depends:       base >=4.9 && <5, exceptions
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010

