name:                monad-batcher-example
version:             0.0.0.0
synopsis:            An example for monad-batcher
homepage:            https://github.com/basvandijk/monad-batcher
license:             BSD3
author:              Bas van Dijk
maintainer:          Bas van Dijk <v.dijk.bas@gmail.com>
copyright:           Bas van Dijk <v.dijk.bas@gmail.com>
category:            Control
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable example
  build-depends:       base, monad-batcher
  main-is:             example.hs
  ghc-options:         -Wall
  default-language:    Haskell2010
